# Kalman-Cart-Prediction

./: Commands Final Project  README.md  rosVisualPlanning.rviz  rosfinal_project.rviz
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: add_two_ints_client.py
final_project/: CMakeLists.txt  package.xml  setup.py
final_project/data/: market.pgm  market.world  market.yaml  marketMed.world  marketMed.yaml  marketMedItems.world
final_project/data/Maps/: marketmedium.pgm  marketsmall.pgm
final_project/scripts/: battery.txt  objectMovements.py  objectMovementsFull.py  objectMovementsPredict.py  objectMovementsRebuild.py  pathPlanning.py  robotMove.py  robotMoveFull.py  robotMoveVisual.py  twist.py  visualPlanning.py  visualPlanningPredict.py  visualPlanningRebuild.py
final_project/src/final_project/: pf.py  util.py
final_project/src/laser_trace/: compilearm.sh
pf_localisation/: CMakeLists.txt  README.md  package.xml  setup.py
pf_localisation/data/real_data/: README.md  trace0.bag  trace1.bag
pf_localisation/data/sim_data/: simpath2.bag
pf_localisation/scripts/: node.py  twist.py
socspioneer/: CMakeLists.txt  README.md  mainpage.dox  package.xml
socspioneer/config/: demo.rviz
socspioneer/data/: lgfloor.pgm  lgfloor.world  lgfloor.world.orig  lgfloor.yaml  lgfloor2.bag  meeting.pgm  meeting.world  meeting.world.bkp  meeting.yaml
socspioneer/launch/: keyboard_teleop.launch  p2os_laser.launch  p2os_teleop_joy.launch  pioneer.launch  stage.launch  teleop_joy.launch
socspioneer/script/: solver.py  twist.py
(+72 files in other folders)
