<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://wwww.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>socspioneer</name>
  <version>2.0.0</version>
  <description>Updated SOCSPioneer package for ROS Melodic with simulation support.</description>

  <license>TODO</license>
  <author email="sxs1412@bham.ac.uk">Saif Sidhik</author>
  <author>Mark Rowan</author>

  <maintainer email="sxs1412@bham.ac.uk">Saif Sidhik</maintainer>
  <maintainer email="lxf656@bham.ac.uk">Laura Ferrante</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
